# backend.template.itp.uebung

./: .dictionary  .gitignore  Dockerfile  README.md  Stundenprotokoll.md  codebook.toml  docker-compose.yml  local_postgres_config.json  prestart.py  pyproject.toml  testrunner.sh
BACKEND_NAME_PLACEHOLDER/: main.py
BACKEND_NAME_PLACEHOLDER/api/: __init__.py  _app.py  _auth.py  _entity_routes.py  _routes.py  _user_routes.py
BACKEND_NAME_PLACEHOLDER/config/: _config_class.py  _logging.py
BACKEND_NAME_PLACEHOLDER/crud/: __init__.py  _crud.py  _crud_base.py  _crud_entity.py  _crud_persons.py  _crud_user.py  _crud_users.py  _error_messages.py
BACKEND_NAME_PLACEHOLDER/engine/: __init__.py
BACKEND_NAME_PLACEHOLDER/model/: __init__.py  _entity.py  _person.py  _todo.py  _user.py
BACKEND_NAME_PLACEHOLDER/schema/: __init__.py  _entity.py  _user.py
BACKEND_NAME_PLACEHOLDER/utils/: _user.py
backend/: main.py
backend/api/: _app.py  _routes.py
backend/config/: __init__.py  _config_class.py  _logging.py
backend/crud/: __init__.py  _crud.py  _crud_base.py  _crud_entity.py  _crud_person.py
backend/engine/: __init__.py
backend/model/: __init__.py  _entity.py  _person.py  _user.py
backend/schema/: __init__.py  _entity.py  _todo.py  _user.py
backend/utils/: _test.py  _user.py
test/: _00_generate_import.py  __init__.py
test/config/: test_config_00.py  test_config_01.py
test/crud/: test_crud_00.py  test_crud_entity_00.py  test_crud_entity_01.py  test_crud_entity_02.py  test_crud_entity_03.py  test_crud_user_00.py  test_crud_user_01.py  test_crud_user_02.py  (+2 more)
(+6 files in other folders)
